--- a/pom.xml
+++ b/pom.xml
@@ -133,6 +133,12 @@
             <version>0.11.5</version>
         </dependency>
 
+        <dependency>
+            <groupId>io.minio</groupId>
+            <artifactId>minio</artifactId>
+            <version>8.5.7</version>
+        </dependency>
+
     </dependencies>
 
     <build>
