--- a/pom.xml
+++ b/pom.xml
@@ -145,6 +145,12 @@
             <version>5.2.3</version>
         </dependency>
 
+        <dependency>
+            <groupId>io.minio</groupId>
+            <artifactId>minio</artifactId>
+            <version>8.5.7</version>
+        </dependency>
+
     </dependencies>
 
     <build>
