--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -38,6 +38,11 @@ spring:
           auth: true
         transport:
           protocol: smtp
+  servlet:
+    multipart:
+      enabled: true
+      max-file-size: 20MB
+      max-request-size: 20MB
 
 logging:
   level:
@@ -55,3 +60,14 @@ application:
       token-validity-in-seconds-for-remember-me: 604800000
   cors:
     allowed-origins-base: "http://localhost:5173/"
+
+minio:
+  url: http://localhost:9000
+  access:
+    key: minio
+  secret:
+    key: minio123
+  bucket:
+    name: cousera
+  file-size: 1073741824
+
